Issue #127: Don't show sidebar toggle on small widths. Fixes #127.

--- a/styles/components/sidebar.scss
+++ b/styles/components/sidebar.scss
@@ -126,6 +126,10 @@ body[data-meta-sidebar=open] {
     &.is-active {
       background-color: var(--gin-bg-item-hover);
     }
+
+    @include mq($to: large) {
+        display: none;
+    }
   }
 
   &__close {
